--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,8 @@ body {
 
 .header-container {
   margin: auto;
+  padding-top: 28px;
+  padding-bottom: 126px;
   position: relative;
   max-width: 1200px;
   text-transform: uppercase;
@@ -50,10 +52,10 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 28px;
   padding-right: 15px;
   padding-left: 15px;
-  padding-bottom: 98px;
+  margin-bottom: 98px;
+
 }
 
 .menu-logo {
@@ -71,8 +73,8 @@ body {
   display: flex;
 }
 
-.menu-list-item {
-  padding-left: 35px;
+.menu-list-item:nth-child(n + 2) {
+  margin-left: 35px;
 }
 
 .menu-link:hover {
@@ -83,7 +85,8 @@ body {
   font-size: 45px;
   line-height: 75px;
   font-weight: bold;
-  padding-bottom: 126px;
+  max-width: 700px;
+  margin: auto;
 }
 
 .trends {
@@ -115,7 +118,45 @@ body {
 .trend-card {
   width: 25%;
   position: relative;
-  z-index: 4;  
+  z-index: 4;
+  align-items: flex-end;
+  display: flex; 
+}
+
+.trend-card-garden {
+  background-image: url(images/trend1.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-color: #eff6f1;
+  background-size: cover;
+   
+}
+
+.trend-card-cheese {
+  background-image: url(images/trend2.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-color: #eff6f1;
+  background-size: cover;
+
+}
+
+.trend-card-mountains {
+  background-image: url(images/trend3.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-color: #eff6f1;
+  background-size: cover;
+  
+   
+}
+
+.trend-card-trend {
+  background-image: url(images/trend4.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-color: #eff6f1;
+  background-size: cover;
 }
 
 .trend-card::before {
@@ -126,47 +167,47 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-  z-index: 3;
-}
-
-.trend-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  background-color: #eff6f1;
+  z-index: -1;
 }
 
 .trend-card-text {
-  position: absolute;
-  bottom: 20px;
-  left: 21px;
-  right: 21px;
   color: #ffffff;
-  z-index: 4;
   border: 3px solid;
   border-color: rgba(181, 159, 91, 0.6);
   padding: 8% 6%;
+  margin: 33% 5% 5% 5%;
+
 }
 
 .trend-categoru-list {
   display: flex;
   font-size: 14px;
   color: #b59f5b;
+  margin-bottom: 2px;
 }
 
-.trend-categoru {
+.trend-categoru:nth-last-child(n + 2) {
   margin-right: 20px;
-  margin-bottom: 2px;
+}
+
+.trend-categoru:hover {
+  text-decoration: underline;
 }
 
 .trend-title {
   font-size: 1.1rem;
 }
 
+.trend-title:hover {
+  color: #b59f5b;
+}
+
 .content {
   margin: 0 auto;
   max-width: 1200px;
   padding-top: 64px;
+  padding-left: 15px;
+  padding-right: 15px;
   display: flex;
   justify-content: space-between;
   font-family: "Open Sans";
@@ -174,7 +215,6 @@ body {
 
 .main {
   width: 778px;
-  padding-left: 15px;
 }
 
 .article {
@@ -184,7 +224,6 @@ body {
 
 .article-img {
   width: 381px;
-  height: 294px;
   margin-right: 30px;
   background-color: #eff6f1;
 }
@@ -200,8 +239,11 @@ body {
   text-transform: uppercase;
   font-weight: bold;
   list-style-type: none;
-  margin-right: 20px;
   color: #b59f5b;
+}
+
+.article-categoru:nth-last-child(n + 2) {
+  margin-right: 20px;
 }
 
 .article-categoru-link {
@@ -261,11 +303,9 @@ body {
 
 .aside {
   width: 272px;
-  padding-right: 15px;
 }
 
 .aside-sidebar {
-  margin-left: 1px;
   padding-bottom: 57px;
 }
 
@@ -366,7 +406,7 @@ body {
 
 .new-post-search-field:focus {
   outline: 1px solid #b59f5b;
-  outline-offset: -2px;
+  outline-offset: -1px;
 }
 
 .new-post-search-button:hover {
@@ -417,17 +457,14 @@ body {
   font-size: 12px;
   text-transform: uppercase;
   font-weight: bold;
-  list-style-type: none;
-  margin-bottom: 19px;
+  margin-bottom: 5px;
   margin-right: 5px;
 }
 
 .tags-link {
-  color: inherit;
-  text-decoration: none;
   border: 3px solid #eeeeee;
   padding: 3px 14px;
-  box-sizing: border-box;
+  display: block;
 }
 
 .tags-link:hover {
@@ -499,23 +536,23 @@ body {
 
 .products {
   display: flex;
-  margin-right: 39px;
-  margin-left: 39px;
+  padding-right: 17px;
+  padding-left: 17px;
   justify-content: space-between;
 }
 
 .products-container {
-  max-width: 300px;
+  width: calc(100% / 3 - 45px);
   display: flex;
   flex-direction: column;
 }
 
 .product-container-img {
-  padding-bottom: 10px;
+  text-align: center;
 }
 
 .product-body {
-  margin: -47px -24px;
+  margin-top: -34px;
   padding: 48px 20px 24px 20px;
   outline: 3px solid;
   outline-color: rgba(181, 159, 91, 0.6);;
@@ -555,14 +592,12 @@ body {
 
 .product-price {
   font-size: 20px;
-  line-height: 0.7;
   display: flex;
 }
 
 .product-price-old {
   text-decoration: line-through;
   font-size: 14px;
-  margin-bottom: 5px;
 }
 
 .product-button {
@@ -576,8 +611,8 @@ body {
   color: #ffffff;
 }
 
-.product-rub {
-  margin-left: 4px;
+.product-button:hover {
+  background-color: #323232;
 }
 
 .foother {
@@ -585,7 +620,7 @@ body {
   max-width: 1200px;
   font-family: "Open Sans";
   text-align: center;
-  padding-top: 112px;
+  padding-top: 70px;
 }
 
 .foother-blok {
@@ -696,10 +731,7 @@ body {
 }
 
 .popup-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  position: relative;
   background: #fff;
   width: 389px;
   padding: 50px 30px;
@@ -710,6 +742,7 @@ body {
   position: absolute;
   right: -3px;
   top: -28px;
+  cursor: pointer;
 }
 
 .svg-popup-close {
@@ -748,6 +781,7 @@ body {
   height: 48px;
   background-color: #f4f7f6;
   border: none;
+  appearance: none;
   padding-left: 14px;
   font-size: 13px;
   margin-bottom: 30px;
@@ -800,6 +834,7 @@ body {
   height: 132px;
   background-color: #f4f7f6;
   border: none;
+  resize: none;
   padding-left: 20px;
   padding-top: 17px;
   font-size: 13px;
