--- a/css/style.css
+++ b/css/style.css
@@ -413,6 +413,10 @@ body {
   background-color: #323232;
 }
 
+.hidden-opesanie {
+  display: none;
+}
+
 .mailing-form-field {
   box-sizing: border-box;
   width: 270px;
@@ -710,15 +714,6 @@ body {
   display: flex;
 }
 
-.popup-close-baskground {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  z-index: 1;
-}
-
 .bth {
   display: inline-block;
   min-width: 50%;
@@ -743,6 +738,8 @@ body {
   right: -3px;
   top: -28px;
   cursor: pointer;
+  border: none;
+  background-color: transparent;
 }
 
 .svg-popup-close {
